Updated social embedding

--- a/handbook.html
+++ b/handbook.html
@@ -2,7 +2,28 @@
 <html lang="en">
 <head>
     <meta charset="utf-8"/>
-    <title>XU4 Handbook</title>
+	<!--------------- SOCIAL EMBEDDING PROPERTIES ------------------------------------------------------------------->
+	<!-- HTML Meta Tags -->
+	<title>XU4 Handbook</title>
+	<meta name="description" content="A collection of useful scripts, commands and procedures for setting up and controlling an Odroid XU4, an ARM based SBC">
+
+	<!-- Facebook Meta Tags -->
+	<meta property="og:url" content="https://dogemcdogeface.github.io/Odroid-XU4-Handbook/handbook.html">
+	<meta property="og:type" content="website">
+	<meta property="og:title" content="XU4 Handbook">
+	<meta property="og:description" content="A collection of useful scripts, commands and procedures for setting up and controlling an Odroid XU4, an ARM based SBC">
+	<meta property="og:image" content="https://dogemcdogeface.github.io/Odroid-XU4-Handbook/www/preview.png">
+
+	<!-- Twitter Meta Tags -->
+	<meta name="twitter:card" content="summary_large_image">
+	<meta property="twitter:domain" content="dogemcdogeface.github.io">
+	<meta property="twitter:url" content="https://dogemcdogeface.github.io/Odroid-XU4-Handbook/handbook.html">
+	<meta name="twitter:title" content="XU4 Handbook">
+	<meta name="twitter:description" content="A collection of useful scripts, commands and procedures for setting up and controlling an Odroid XU4, an ARM based SBC">
+	<meta name="twitter:image" content="https://dogemcdogeface.github.io/Odroid-XU4-Handbook/www/preview.png">
+
+	<!-- Meta Tags Generated via https://www.opengraph.xyz -->
+        
 </head>
 <body>
 <!-------------------------------------------- GUIDE SETTINGS --------------------------------------------------------->
