--- a/handbook.html
+++ b/handbook.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns="http://www.w3.org/1999/html">
 <head>
     <meta charset="utf-8"/>
 	<!--------------- SOCIAL EMBEDDING PROPERTIES ------------------------------------------------------------------->
@@ -53,6 +53,10 @@
                 {label: "Network password", fieldName: "net-pswd", placeHolder: "Passw0rd"},
             ],
             [
+                {label: "Device hostname", fieldName: "net-hnme", placeHolder: "odroidXU4"},
+                {label: "Static ip", fieldName: "net-ip", placeHolder: "192.186.2.123/24"},
+            ],
+            [
                 {label: "User name", fieldName: "usr-name", placeHolder: "User"},
                 {label: "User password", fieldName: "usr-pswd", placeHolder: "P4ssw0r8"},
             ],
@@ -104,6 +108,10 @@
     <summary>
         <h2>Connect to WiFi</h2>
     </summary>
+    <p>If you don't have access to an ethernet connection, you will need a wireless adaptor (eg. an usb dongle) to ssh into the machine. <br>
+    The easiest way to interact with the machine without a network connection will be to connect a monitor and keyboard and use the terminal. <br>
+    This guide assumes a minimal installation with no gui, but network manager installed.</p>
+
     <h3>Enable wifi</h3>
 
 <pre>
@@ -170,10 +178,79 @@ nmcli dev wifi list  </pre>
     </table></pre>
     </blockquote>
 
-    <h3>Connect to a network</h3>
 
+
+
+
+
+
+
+
+
+    <h3>Interactive network options</h3>
+
+    <p>Network Manager offers a tui interface:</p>
+    <pre>nmtui</pre>
+
+    <blockquote><pre>
+    ┌─┤ NetworkManager TUI ├──┐        ┌───────────────────────────────────────────────┐
+    │                         │        │                                               │
+    │ Please select an option │        │                                               │
+    │                         │        │ ┌──────────────────────────────┐              │
+    │ Edit a connection       │        │ │ Wired                        │ [Activate]   │
+    │ Activate a connection   │        │ │ * Wired connection 1       ▒ │              │
+    │ Set system hostname     │        │ │                            ▒ │              │
+    │                         │        │ │ Wi-Fi                      ▒ │              │
+    │ Quit                    │        │ │   Network-wifi       ***   ▒ │              │
+    │                         │        │ │   Neighbr-ntwk32     ****  ▒ │              │
+    │                    [OK] │        │ │                            ▒ │              │
+    │                         │        │ │                            ▒ │              │
+    └─────────────────────────┘        │ │                            ▒ │              │
+
+    </pre></blockquote>
+
+
+
+    <h3>Command line network options</h3>
+    <blockquote class="warn"><p>Warning: these commands will display your wifi password in the terminal, and might leak it in the command history. Use the interactive tools if possible.</p></blockquote>
+
+    <p>Command line connection:</p>
+    <pre>nmcli device wifi connect <ins class="net-ssid">network_ssid</ins> password <ins class="net-pswd">network_pswd</ins></pre>
+    <p>Connect with a static ip:</p>
     <pre>
-nmcli device wifi connect <ins class="net-ssid">network_pswd</ins> password <ins class="net-pswd">network_pswd</ins>
+nmcli con add con-name "<ins class="net-ssid">network_ssid</ins>" type wifi ifname wlan0 ssid "<ins class="net-ssid">network_ssid</ins>" -- wifi-sec.key-mgmt wpa-psk wifi-sec.psk "<ins class="net-pswd">network_pswd</ins>" ipv4.method manual ipv4.address <ins class="net-ip">YOUR IP</ins>
+nmcli con up "<ins class="net-ssid">network_ssid</ins>"</pre>
+    <blockquote><pre>
+    Connection '<ins class="net-ssid">network_ssid</ins>' (12312323-3333-3333-3333-asd222sss2222) successfully added.
+    Connection successfully activated (D-Bus active path: /org/freedesktop/NetworkManager/ActiveConnection/4)</pre></blockquote>
+
+    <h3>Delete a connection</h3>
+    <pre>nmcli connection delete "<ins class="net-ssid">network_ssid</ins>"</pre>
+    <blockquote><pre>Connection '<ins class="net-ssid">network_ssid</ins>' (123123123-1233-3211-qwee-42124234d) successfully deleted.</pre></blockquote>
+
+
+    <h3>Change connection priority</h3>
+    <pre>
+    nmcli connection modify "Wired connection 1" connection.autoconnect-priority 10
+    nmcli -f NAME,UUID,AUTOCONNECT,AUTOCONNECT-PRIORITY c</pre>
+    <blockquote><pre>
+    <table>
+  <tr>
+    <th>Name</th>
+    <th>UUID</th>
+    <th>Autoconnect</th>
+    <th>Autoconnect-priority</th>
+  </tr>
+  <tr>
+    <td>Wired connection 1</td>
+    <td>12312323-4444-4444-4444-123123123123</td>
+    <td>yes</td>
+    <td>10</td>
+  </tr>
+</table></pre></blockquote>
+
+    <h3>Verify your connections:</h3>
+    <pre>
 nmcli connection show
 ip a |grep inet</pre>
 
@@ -197,14 +274,257 @@ ip a |grep inet</pre>
             <td>eth0</td>
         </tr>
         <tr>
-            <td class="net-ssid">Network-name</td>
+            <td><ins class="net-ssid">network_ssid</ins></td>
             <td>55555555-1111-2222-3333-444444444444</td>
             <td>wlan0</td>
             <td>Infra</td>
         </tr>      </tbody>    </table>        </pre>
-        <pre><code>inet 192.168.1.203/24        </code></pre>
+        <pre>inet <mark>192.168.1.111/24</mark> brd 192.168.1.255 scope global <mark>dynamic</mark> noprefixroute eth0      <--Ethernet Adapter
+inet <mark><ins class="net-ip">YOUR IP</ins></mark> brd 192.168.1.255 scope global noprefixroute wlan0              <--Wifi Adapter</pre>
     </blockquote>
+    <blockquote class="warn"><p>If you see a connection marked as dynamic, the IP might change unpredictably, eg after reboots, and you will not be able to ssh in until you figure out the new IP!</p></blockquote>
+    <p>Verify internet access:</p>
+    <pre>ping google.com</pre>
+    <blockquote><pre>
+    64 bytes from mil04s43-in-f14.1e100.net (142.250.180.142): icmp_seq=1 ttl=115 time=7.66 ms
+    64 bytes from mil04s43-in-f14.1e100.net (142.250.180.142): icmp_seq=2 ttl=115 time=7.60 ms
+    ...</pre></blockquote>
+
+
+    <h3>Set host name</h3>
+
+    <p>The system hostname is used to identify a machine in a network in a human readable format.</p>
+    <p>View current hostname:</p>
+    <pre>hostname</pre>
+    <blockquote> <pre>hostname odroid</pre> </blockquote>
+    <p>Change hostname:</p>
+    <pre>sudo hostnamectl set-hostname <ins class="net-hnme">new_hostname</ins>
+hostname</pre>
+    <blockquote> <pre>hostname <ins class="net-hnme">new_hostname</ins></pre> </blockquote>
+
 </div>
+<!-------------------------------------------- CONNECTIONS ------------------------------------------->
+<div class="details">
+    <summary>
+        <h2>Connections Information</h2>
+    </summary>
+
+    <h3>Network Managers</h3>
+    <p>View available network managers:</p>
+    <pre>systemctl --type=service | grep --ignore-case 'network'</pre>
+    <blockquote><pre>
+    NetworkManager.service                         loaded active running Network Manager
+    systemd-networkd-wait-online.service           loaded active exited  Wait for Network to be Configured
+    ...</pre></blockquote>
+
+
+    <h3>ip</h3>
+    <p>Shows addresses assigned to all network interfaces:</p>
+    <pre>ip a</pre>
+    <p>More concise output:</p>
+    <pre> ip a | grep "inet "</pre>
+    <blockquote><pre>
+    inet 127.0.0.1/8 scope host lo
+    inet 192.168.1.111/24 brd 192.168.1.255 scope global dynamic noprefixroute eth0
+    inet 192.168.1.222/24 brd 192.168.1.255 scope global noprefixroute wlan0</pre></blockquote>
+
+
+    <p>Get connection statistics:</p>
+    <pre>ip -s link</pre>
+    <blockquote><pre>
+    <table>
+  <tr>
+    <th>Interface</th>
+    <th>Description</th>
+    <th>MTU</th>
+    <th>State</th>
+    <th>Mode</th>
+    <th>Group</th>
+    <th>Qlen</th>
+    <th>Link/ether</th>
+    <th>Broadcast</th>
+  </tr>
+      <tr>
+  </tr>
+  <tr>
+    <td>eth0</td>
+    <td>BROADCAST,MULTICAST,UP,LOWER_UP</td>
+    <td>1500</td>
+    <td>fq_codel state UP</td>
+    <td>DEFAULT</td>
+    <td>default</td>
+    <td>1000</td>
+    <td>00:1e:06:37:42:ff</td>
+    <td>ff:ff:ff:ff:ff:ff</td>
+  </tr>
+  <tr>
+    <td></td>
+    <td>RX:</td>
+    <td>bytes</td>
+    <td>packets</td>
+    <td>errors</td>
+    <td>dropped</td>
+    <td>missed</td>
+    <td>mcast</td>
+    <td></td>
+  </tr>
+  <tr>
+    <td></td>
+    <td></td>
+    <td>1062498</td>
+    <td>6196</td>
+    <td>0</td>
+    <td>57</td>
+    <td>0</td>
+    <td>0</td>
+    <td></td>
+  </tr>
+  <tr>
+    <td></td>
+    <td>TX:</td>
+    <td>bytes</td>
+    <td>packets</td>
+    <td>errors</td>
+    <td>dropped</td>
+    <td>carrier</td>
+    <td>collsns</td>
+    <td></td>
+  </tr>
+  <tr>
+    <td></td>
+    <td></td>
+    <td>3794910</td>
+    <td>32297</td>
+    <td>0</td>
+    <td>0</td>
+    <td>0</td>
+    <td>0</td>
+    <td></td>
+      <tr>
+  </tr>
+  <tr>
+    <td>wlan0</td>
+    <td>BROADCAST,MULTICAST,UP,LOWER_UP</td>
+    <td>1500</td>
+    <td>mq state UP</td>
+    <td>DORMANT</td>
+    <td>default</td>
+    <td>1000</td>
+    <td>1c:bf:ce:77:84:74</td>
+    <td>ff:ff:ff:ff:ff:ff</td>
+  </tr>
+  <tr>
+    <td></td>
+    <td>RX:</td>
+    <td>bytes</td>
+    <td>packets</td>
+    <td>errors</td>
+    <td>dropped</td>
+    <td>missed</td>
+    <td>mcast</td>
+    <td></td>
+  </tr>
+  <tr>
+    <td></td>
+    <td></td>
+    <td>3992249</td>
+    <td>33808</td>
+    <td>0</td>
+    <td>24</td>
+    <td>0</td>
+    <td>0</td>
+    <td></td>
+  </tr>
+  <tr>
+    <td></td>
+    <td>TX:</td>
+    <td>bytes</td>
+    <td>packets</td>
+    <td>errors</td>
+    <td>dropped</td>
+    <td>carrier</td>
+    <td>collsns</td>
+    <td></td>
+  </tr>
+  <tr>
+    <td></td>
+    <td></td>
+    <td>40978</td>
+    <td>416</td>
+    <td>0</td>
+    <td>0</td>
+    <td>0</td>
+    <td>0</td>
+    <td></td>
+  </tr></table>
+    </pre></blockquote>
+
+
+    <h3>nmcli</h3>
+    <p>nmcli is a command-line tool for controlling NetworkManager and reporting network status.</p>
+    <p>Get information on devices and connections:</p>
+    <pre>nmcli</pre>
+
+    <p>Get information on active connections:</p>
+    <pre>nmcli -p device</pre>
+    <blockquote><pre>
+    =====================
+     Status of devices
+    =====================
+    DEVICE  TYPE      STATE      CONNECTION
+    -----------------------------------------------------------------------
+    eth0    ethernet  connected  Wired connection 1
+    wlan0   wifi      connected  <ins class="net-ssid">network_ssid</ins></pre></blockquote>
+
+
+    <p>See connection priorities:</p>
+    <pre>nmcli -f NAME,UUID,AUTOCONNECT,AUTOCONNECT-PRIORITY c</pre>
+    <blockquote><pre>
+    <table>
+      <tr>
+        <th>Name</th>
+        <th>UUID</th>
+        <th>Autoconnect</th>
+        <th>Autoconnect-priority</th>
+      </tr>
+      <tr>
+        <td>Wired connection 1</td>
+        <td>12312323-4444-4444-4444-123123123123</td>
+        <td>yes</td>
+        <td>-999</td>
+      </tr>
+      <tr>
+        <td><ins class="net-ssid">network_ssid</ins></td>
+        <td>12312323-4444-4444-4444-123123123123</td>
+        <td>yes</td>
+        <td>0</td>
+      </tr>
+    </table>
+    </pre></blockquote>
+
+
+    <h3>iwconfig</h3>
+    <p>Iwconfig may be used to display the parameters of the network interface, and the wireless statistics. </p>
+    <pre>iwconfig</pre>
+    <blockquote><pre>
+    lo        no wireless extensions.
+
+    wlan0     IEEE 802.11  ESSID:"<ins class="net-ssid">network_ssid</ins>"
+    Mode:Managed  Frequency:2.462 GHz  Access Point: 11:22:33:44:55:66
+    Bit Rate=65 Mb/s   Tx-Power=1744 dBm
+    Retry short limit:4   RTS thr:off   Fragment thr:off
+    Encryption key:on
+    Power Management:off
+    Link Quality=67/70  Signal level=43 dBm
+    Rx invalid nwid:0  Rx invalid crypt:0  Rx invalid frag:0
+    Tx excessive retries:1  Invalid misc:199   Missed beacon:0
+
+    eth0      no wireless extensions.</pre></blockquote>
+
+
+
+</div>
+
 <!--------------------------------------------- FIREWALL --------------------------------------------->
 <div class="details">
     <summary>
@@ -242,6 +562,8 @@ ufw status</pre>
 </table></pre>
     </blockquote>
 </div>
+
+
 <!-------------------------------------------- GUIDE BODY -------------------------------------------->
 <div class="details">
     <summary>
