Updated wifi section

--- a/handbook.html
+++ b/handbook.html
@@ -249,7 +249,7 @@ nmcli con up "<ins class="net-ssid">network_ssid</ins>"</pre>
   </tr>
 </table></pre></blockquote>
 
-    <h3>Verify your connections:</h3>
+    <h3>Verify your connections</h3>
     <pre>
 nmcli connection show
 ip a |grep inet</pre>
