Improved <code> formatting, rewritten all pre blocks to also use  <code>

--- a/handbook.html
+++ b/handbook.html
@@ -126,9 +126,7 @@ nmcli dev wifi list  </code></pre>
         <p>Output:</p>
         <pre><code>enabled</code></pre>
 
-        <pre><code><table>
-        <thead>
-        <tr>
+        <pre><code><table><thead><tr>
             <th>IN-USE</th>
             <th>BSSID</th>
             <th>SSID</th>
@@ -173,18 +171,8 @@ nmcli dev wifi list  </code></pre>
             <td>59</td>
             <td>***</td>
             <td>WPA2</td>
-        </tr>
-        </tbody>
-    </table></code></pre>
+        </tr></tbody></table></code></pre>
     </blockquote>
-
-
-
-
-
-
-
-
 
 
     <h3>Interactive network options</h3>
