--- a/handbook.html
+++ b/handbook.html
@@ -23,11 +23,11 @@
 	<meta name="twitter:image" content="https://dogemcdogeface.github.io/Odroid-XU4-Handbook/www/preview.png">
 
 	<!-- Meta Tags Generated via https://www.opengraph.xyz -->
-    <!--<script src=" https://cdn.jsdelivr.net/npm/prismjs@1.29.0/prism.min.js "></script>
-    <link href=" https://cdn.jsdelivr.net/npm/prismjs@1.29.0/themes/prism.min.css " rel="stylesheet">
-    <script src=" https://cdn.jsdelivr.net/npm/prismjs@1.29.0/plugins/autoloader/prism-autoloader.min.js "></script>-->
+    <script src=" https://cdn.jsdelivr.net/npm/prismjs@1.29.0/prism.min.js "></script>
+    <link href=" https://cdn.jsdelivr.net/npm/prismjs@1.29.0/themes/prism-tomorrow.css " rel="stylesheet">
+    <script src=" https://cdn.jsdelivr.net/npm/prismjs@1.29.0/plugins/autoloader/prism-autoloader.min.js "></script>
 </head>
-<body>
+<body class="language-shell">
 <!-------------------------------------------- GUIDE SETTINGS --------------------------------------------------------->
 <div class="container">
     <h1>XU4 Handbook 25/04/2023</h1>
